2014-03-14  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_mounts_linux(): Don't quote unknown canonical name.
	  - get_canonical(): Return value denoting if name was known.

2014-03-13  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Corrected formatting.
	* TODO: Updates.
	* configure.ac: Link to libcap if available.
	* src/procenv.c:
	  - get_capability_by_flag(): New function to query a capability value
	    for a specified capability type.
	  - show_capabilities_linux():
	    - Make use of libcap calls.
	    - Add missing CAP_BLOCK_SUSPEND.
	    - Show "unknown" capabilities if detected (capabilities that the
	      running kernel supports which procenv doesn't know about).
	* src/procenv.h:
	  - PROCENV_FORMAT_VERSION: bumped to version 5 for capabilities output
	    format change.
	  - show_capability(): Now calls _show_capability().
	  - _show_capability(): Reworking of show_capability() macro that uses
	    libcap calls and works for unknowns too.

2014-01-31  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Build procenv.spec from .in file to auto-update
	  version number.
	* procenv.spec.in: Renamed from procenv.spec.
	* src/procenv.c: show_capabilities_bsd(): Fixes to allow
	  building on FreeBSD 9.

2014-01-27  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Check for FreeBSD Capsicum support.
	* man/procenv.1:
	  - --fds: Update for FreeBSD to mention Capsicum capabilities.
	  - --capabilities: Explain this option is for Linux capabilities only
	    (a different beast to Capsicum).
	  - SEE ALSO: Further references.
	  - Corrected BSD comment for --semaphores, --message-queues and
	    --shared-memory.
	* src/procenv.c:
	  - mntopt_map: Journaled Soft Updates fix for FreeBSD 8 and older.
	  - usage():
	    - Typo fix.
	  - show_fds_generic(): Added FreeBSD Capsicum capabilities for systems
	    which support it (FreeBSD 9+, assuming kernel is appropriately
	    configured).